Ported to NeoForge for Minecraft version 1.21.1